--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
+@use "node_modules/material-design-lite/docsite/public/css/core.css";
+@use "node_modules/material-design-lite/docsite/public/css/components/progress-indicator/style.css" as progress-style;
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;display=swap");
+@font-face {
+  font-family: "Material Icons";
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/materialicons/v139/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2)
+    format("woff2");
+}
+
+body {
+  font-family: "Roboto", "sans-serif";
+}
+
+.progress-container {
+  left: 50%;
+  position: absolute;
+  top: 50%;
+}
+
+.material-icons {
+  direction: ltr;
+  display: inline-block;
+  font-family: "Material Icons";
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: normal;
+  letter-spacing: normal;
+  line-height: 1;
+  text-transform: none;
+  white-space: nowrap;
+  word-wrap: normal;
+
+  -webkit-font-feature-settings: "liga";
+  -webkit-font-smoothing: antialiased;
+}
