--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,6 +43,7 @@
   --mat-menu-item-with-icon-leading-spacing: 1rem;
   --mat-menu-item-with-icon-trailing-spacing: 1rem;
   --mat-sys-on-primary-container: var(--md-sys-color-surface);
+  --mat-sys-primary: var(--md-sys-color-secondary);
   --mat-sys-primary-container: var(--md-sys-color-tertiary);
   --mat-tab-container-height: 3rem;
   --mat-toolbar-standard-height: 4rem;
@@ -94,6 +95,7 @@
     --mat-menu-item-with-icon-leading-spacing: 1rem;
     --mat-menu-item-with-icon-trailing-spacing: 1rem;
     --mat-sys-on-primary-container: var(--md-sys-color-surface);
+    --mat-sys-primary: var(--md-sys-color-secondary);
     --mat-sys-primary-container: var(--md-sys-color-tertiary);
     --mat-tab-container-height: 3rem;
     --mat-toolbar-standard-height: 4rem;
@@ -137,6 +139,7 @@
     --mat-menu-item-with-icon-leading-spacing: 1rem;
     --mat-menu-item-with-icon-trailing-spacing: 1rem;
     --mat-sys-on-primary-container: var(--md-sys-color-surface);
+    --mat-sys-primary: var(--md-sys-color-secondary);
     --mat-sys-primary-container: var(--md-sys-color-tertiary);
     --mat-tab-container-height: 3rem;
     --mat-toolbar-standard-height: 4rem;
@@ -181,6 +184,7 @@
     --mat-menu-item-with-icon-leading-spacing: 1rem;
     --mat-menu-item-with-icon-trailing-spacing: 1rem;
     --mat-sys-on-primary-container: var(--md-sys-color-surface);
+    --mat-sys-primary: var(--md-sys-color-secondary);
     --mat-sys-primary-container: var(--md-sys-color-tertiary);
     --mat-tab-container-height: 3rem;
     --mat-toolbar-standard-height: 4rem;
@@ -223,6 +227,7 @@
     --mat-menu-item-with-icon-leading-spacing: 1rem;
     --mat-menu-item-with-icon-trailing-spacing: 1rem;
     --mat-sys-on-primary-container: var(--md-sys-color-surface);
+    --mat-sys-primary: var(--md-sys-color-secondary);
     --mat-sys-primary-container: var(--md-sys-color-tertiary);
     --mat-tab-container-height: 3rem;
     --mat-toolbar-standard-height: 4rem;
