--- a/src/styles.scss
+++ b/src/styles.scss
@@ -250,7 +250,10 @@ body {
   margin: 0;
 }
 
-x-root {
+x-shell {
+  background-color: var(--x-shell-background-color);
+  display: flex;
+  min-height: 100vh;
   width: 100%;
 }
 
